カード増やす事だけできるようになった

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <script type="text/javascript" src="./script.js"></script>
     </head>
     <body>
-      <button class="add_card" onclick="createCard()">+</button>
+      <div id="card_space">
+        <script>createCard();</script>
+      </div>
+      <button class="add_card">+</button>
     </body>
 </html>
